--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,64 @@
+.box-set {
+    position: relative;
+    width: 960px;
+    background: #ffffff;
+    margin-left: 450px;
+    margin-top: 35px;
+    margin-bottom: 75px;
+    overflow: overlay;
+    float: left;
+}
+
+#contact{
+    padding: 25px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+}
+
 body {
-    border-color:#dddddd;
-    background-color: #ffffff;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    background-color: #dddddd;
 }
 
 ul {
-    list-style-type:none;
+    list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 35px;
+    overflow: hidden;
+    background-color: #ffffff;
 }
 
-li1 {
-    float:left;
-}
-
-li2 {
-    float:right;
+li{
+    float: right;
 }
 
 li a {
     display: block;
-    padding: 10px;
-    background-color: #ffffff;
+    margin-right: 450px;
+    font-size: 15px;
+    text-decoration: none;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: center;
+    color: #777777;
+
 }
+h1 {float: left;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-left: 460px;
+    margin-top: 10px;
+}
+
+h2 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    color: #4aaaa5;
+    padding-top: 35px;
+    padding-left: 25px;
+}
+
+
+
+ 
