--- a/assets/css/footerstyle.css
+++ b/assets/css/footerstyle.css
@@ -3,7 +3,9 @@ footer {
     padding: 1em;
     background-color: #666666;
     text-align: center;
-    clear: left;
     width: 100%;
+    height: 60px;
+    border-top: #4aaaaf;
+    border-top-style: solid;
+    border-top-width: 10px;
 }
-
