--- a/assets/css/headerstyle.css
+++ b/assets/css/headerstyle.css
@@ -4,7 +4,7 @@ header {
     text-align: center;
     clear: both;
     width: 100%;
-    height: 75px;
+    height: 85px;
     overflow: hidden;
 }
 
@@ -16,4 +16,20 @@ header {
     font-size: 2em;
     margin-left: 450px;
     
+}
+
+li{
+    float: right;
+    padding: 10px;
+}
+
+li a {
+    display: contents;
+    font-size: 15px;
+    text-decoration: none;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: center;
+    color: #777777;
+
+
 }
