--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,44 @@
 .box-set {
     position: relative;
-    width: 960px;
     background: #ffffff;
-    margin-left: 450px;
-    margin-top: 35px;
-    margin-bottom: 75px;
+    margin: 35px 450px 75px 450px;
     overflow: overlay;
-    float: left;
+    height: 500px;
+    padding: 10px;
+    
 }
 
-#contact{
+
+.background {
+    width: 100%;
+    background-image: url("../images/circles-light.png"); 
+}
+
+#contact {
     padding: 25px;
+    padding-bottom: 5px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
-}
 
+}
+.space {
+    line-height: 1.5;
+}
 body {
     height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
-    background-color: #dddddd;
 }
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 35px;
+    margin-right: 450px;
     overflow: hidden;
     background-color: #ffffff;
 }
 
-li{
-    float: right;
-}
-
-li a {
-    display: block;
-    margin-right: 450px;
-    font-size: 15px;
-    text-decoration: none;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    text-align: center;
-    color: #777777;
-
-}
 h1 {float: left;
     font-family: 'Georgia', Times, Times New Roman, serif;
     margin-left: 460px;
